...
        return label
    }
    
    private func makeAppleLinkButton() -> UIButton {
        let button = UIButton(type: .system)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.accessibilityIdentifier = "Apple Music Link"
        button.setTitle(NSLocalizedString("Open Album in Apple Music", comment: "Open Album URL in Apple Music"), for: .normal)
        button.addTarget(self, action: #selector(openURL), for: .touchUpInside)
        return button
    }
    
    private func makeAlbumCoverImageView() -> UIImageView {
        let imageView = UIImageView()
        imageView.translatesAutoresizingMaskIntoConstraints = false
        imageView.contentMode = .scaleAspectFit
        imageView.accessibilityIdentifier = "Album Cover Image"
        imageView.accessibilityLabel = "Album Cover for \(album.name)"
        imageView.heightAnchor.constraint(equalToConstant: 200).isActive = true
        imageView.widthAnchor.constraint(equalToConstant: 200).isActive = true
        return imageView
    }
    
...
